--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: ajith@example.com</p>
+        <p>Email: muniajithkumargollagunta@gmail.com.com</p>
         <p>LinkedIn: <a href="#">linkedin.com/in/ajith</a></p>
     </section>
 
