--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:muniajithkumargollagunta@gmail.com">muniajithkumargollagunta@gmail.com</a></p>
-        <p>LinkedIn: <a href="#">Your LinkedIn Profile</a></p>
+        <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/ajith-kumar-gollagunta" target="_blank">Ajith Kumar Gollagunta</a></p>
     </section>
 
     <footer>
