--- a/index.html
+++ b/index.html
@@ -87,18 +87,52 @@
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+    <h2>Projects</h2>
 
-        <div class="project">
-            <h3>Investment Portfolio Analysis</h3>
-            <p>Developed a Python tool using Seaborn to analyze investment performance trends.</p>
-        </div>
+    <div class="project">
+        <h3>📊 Investment Portfolio Analysis</h3>
+        <p>Developed a Python tool using Seaborn to analyze investment performance trends.</p>
+        <img src="assets/investment_dashboard.jpg" alt="Investment Dashboard" class="project-image">
+        <p><strong>Technologies:</strong> Python, Pandas, Seaborn, SQL</p>
+    </div>
 
-        <div class="project">
-            <h3>Financial Risk & Credit Analysis</h3>
-            <p>Built predictive models in Scikit-learn to assess financial risk and optimize decision-making.</p>
-        </div>
-    </section>
+    <div class="project">
+        <h3>📈 Sales Dashboard Analysis</h3>
+        <p>Designed an interactive Power BI sales dashboard for tracking revenue and market trends.</p>
+        <img src="assets/sales_dashboard.jpg" alt="Sales Dashboard" class="project-image">
+        <p><strong>Technologies:</strong> Power BI, DAX, SQL, Excel</p>
+    </div>
+
+    <div class="project">
+        <h3>📌 Financial Risk & Credit Analysis</h3>
+        <p>Built predictive models in Scikit-learn to assess financial risk and optimize decision-making.</p>
+        <img src="assets/credit_risk.jpg" alt="Credit Risk Model" class="project-image">
+        <p><strong>Technologies:</strong> Python, Scikit-learn, Machine Learning, SQL</p>
+    </div>
+
+    <div class="project">
+        <h3>📉 Customer Churn Prediction</h3>
+        <p>Created a machine learning model to predict customer churn for a telecom company.</p>
+        <img src="assets/customer_churn.jpg" alt="Customer Churn Prediction" class="project-image">
+        <p><strong>Technologies:</strong> Python, Pandas, Scikit-learn, Random Forest</p>
+    </div>
+
+    <div class="project">
+        <h3>💡 Sentiment Analysis on Product Reviews</h3>
+        <p>Developed a sentiment analysis model to categorize customer reviews into positive, neutral, or negative sentiments.</p>
+        <img src="assets/sentiment_analysis.jpg" alt="Sentiment Analysis" class="project-image">
+        <p><strong>Technologies:</strong> Python, NLP, TextBlob, Machine Learning</p>
+    </div>
+
+    <div class="project">
+        <h3>🌎 Geospatial Data Visualization</h3>
+        <p>Created interactive maps using Python and Folium to analyze geographic sales distribution.</p>
+        <img src="assets/geospatial_analysis.jpg" alt="Geospatial Analysis" class="project-image">
+        <p><strong>Technologies:</strong> Python, Folium, GeoPandas, Power BI</p>
+    </div>
+
+</section>
+
 
     <section id="education">
         <h2>Education & Certifications</h2>
