--- a/index.html
+++ b/index.html
@@ -26,9 +26,28 @@
     </nav>
 
     <section id="summary">
-        <h2>Summary</h2>
-        <p>Experienced Business Intelligence Analyst with 3+ years of expertise in automating data analysis, developing analytical tools, and creating dashboards across finance and education. Proficient in Python, SQL, Power BI, and AWS for data-driven decision-making.</p>
-    </section>
+    <h2>About Me</h2>
+    <p>
+        I am a results-driven <strong>Data Analyst</strong> with <strong>3+ years</strong> of experience in transforming raw data into meaningful insights, optimizing data workflows, and developing <strong>interactive dashboards</strong> for finance and education industries. My expertise lies in leveraging <strong>Python, SQL, Power BI, and Tableau</strong> to build scalable analytics solutions that enhance decision-making and business strategy.
+    </p>
+
+    <p>
+        Throughout my career, I have designed and implemented data-driven solutions that automate reporting, streamline data pipelines, and enhance visualization capabilities. I specialize in <strong>data cleaning, statistical analysis, predictive modeling, and business intelligence</strong>, ensuring that stakeholders have access to accurate and actionable insights. My technical background includes working with <strong>PostgreSQL, MongoDB, and AWS (S3, EC2)</strong>, allowing me to manage large-scale datasets efficiently.
+    </p>
+
+    <p>
+        In my current role at <strong>Capital One Financial</strong>, I developed an <strong>investment portfolio analysis tool</strong> using Python, automated data extraction tasks, and built Power BI dashboards that increased stakeholder engagement by 60%. Previously, at <strong>Cybage Software</strong>, I optimized SQL queries and deployed Tableau dashboards that streamlined financial and educational analytics.
+    </p>
+
+    <p>
+        I thrive in fast-paced environments, collaborating with cross-functional teams to deliver data-driven solutions. Whether it's <strong>building machine learning models for financial risk analysis</strong> or <strong>developing dynamic Power BI dashboards</strong>, I am passionate about using data to drive impact. I am also well-versed in Agile methodologies, participating in sprint planning and retrospectives to ensure continuous improvement in analytics workflows.
+    </p>
+
+    <p>
+        My goal is to continuously innovate and contribute to projects that leverage **data science, business intelligence, and machine learning** to create value and solve complex problems.
+    </p>
+</section>
+
 
     <section id="skills">
         <h2>Technical Skills</h2>
